==> ErBWs/CH32-Bike-Overland/2.Firmware/1.FrontCar/MM32F527X_E9P/project/user/src/isr.c <==
#include "isr.h"

void TIM1_UP_IRQHandler (void)
{
    // 此处编写用户代码

    // 此处编写用户代码
    TIM_ClearInterruptStatus((TIM_Type *)TIM1, TIM_GetInterruptStatus((TIM_Type *)TIM1));
}

void TIM2_IRQHandler (void)
{
    // 此处编写用户代码

    // 此处编写用户代码
    TIM_ClearInterruptStatus((TIM_Type *)TIM2, TIM_GetInterruptStatus((TIM_Type *)TIM2));
}

void TIM3_IRQHandler (void)
{
    // 此处编写用户代码

    // 此处编写用户代码
    TIM_ClearInterruptStatus((TIM_Type *)TIM3, TIM_GetInterruptStatus((TIM_Type *)TIM3));
}

void TIM4_IRQHandler (void)
{
    // 此处编写用户代码

    // 此处编写用户代码
    TIM_ClearInterruptStatus((TIM_Type *)TIM4, TIM_GetInterruptStatus((TIM_Type *)TIM4));
}

void TIM5_IRQHandler (void)
{
    // 此处编写用户代码

    // 此处编写用户代码
    TIM_ClearInterruptStatus((TIM_Type *)TIM5, TIM_GetInterruptStatus((TIM_Type *)TIM5));
}

void TIM6_IRQHandler (void)
{
    // 此处编写用户代码
    EasyKeyHandler(10);
    EasyUI(10);
    // 此处编写用户代码
    TIM_ClearInterruptStatus((TIM_Type *)TIM6, TIM_GetInterruptStatus((TIM_Type *)TIM6));
}

void TIM7_IRQHandler (void)
{
    // 此处编写用户代码
    SpeedControl();
    VofaBigEndianSendFrame();
    // 此处编写用户代码
    TIM_ClearInterruptStatus((TIM_Type *)TIM7, TIM_GetInterruptStatus((TIM_Type *)TIM7));
}

void TIM8_UP_IRQHandler (void)
{
    // 此处编写用户代码

    // 此处编写用户代码
    TIM_ClearInterruptStatus((TIM_Type *)TIM8, TIM_GetInterruptStatus((TIM_Type *)TIM8));
}

void UART4_IRQHandler (void)
{
    if(UART_INT_TX_EMPTY & UART_GetInterruptStatus(UART4))                      // 串口发送缓冲空中断
    {
        // 此处编写用户代码
        // 务必填写数据或者关闭中断 否则会一直触发串口发送中断

        // 此处编写用户代码
        UART_ClearInterruptStatus(UART4, UART_INT_TX_EMPTY);                    // 清除中断标志位
    }
    if(UART_INT_RX_DONE & UART_GetInterruptStatus(UART4))                       // 串口接收缓冲中断
    {
        // -----------------* GPS 预置中断处理函数 *-----------------
        gps_uart_callback();
        // -----------------* GPS 预置中断处理函数 *-----------------
        // 此处编写用户代码
        // 务必读取数据或者关闭中断 否则会一直触发串口接收中断

        // 此处编写用户代码
        UART_ClearInterruptStatus(UART4, UART_INT_RX_DONE);                     // 清除中断标志位
    }
}

void UART5_IRQHandler (void)
{
    if(UART_INT_TX_EMPTY & UART_GetInterruptStatus(UART5))                      // 串口发送缓冲空中断
    {
        // 此处编写用户代码
        // 务必填写数据或者关闭中断 否则会一直触发串口发送中断

        // 此处编写用户代码
        UART_ClearInterruptStatus(UART5, UART_INT_TX_EMPTY);                    // 清除中断标志位
    }
    if(UART_INT_RX_DONE & UART_GetInterruptStatus(UART5))                       // 串口接收缓冲中断
    {
        // -----------------* 摄像头初始化 串口 预置中断处理函数 *-----------------
        camera_uart_handler();
        // -----------------* 摄像头初始化 串口 预置中断处理函数 *-----------------
        // 此处编写用户代码
        // 务必读取数据或者关闭中断 否则会一直触发串口接收中断

        // 此处编写用户代码
        UART_ClearInterruptStatus(UART5, UART_INT_RX_DONE);                     // 清除中断标志位
    }
}

void UART6_IRQHandler (void)
{
    if(UART_INT_TX_EMPTY & UART_GetInterruptStatus(UART6))                      // 串口发送缓冲空中断
    {
        // 此处编写用户代码
        // 务必填写数据或者关闭中断 否则会一直触发串口发送中断

        // 此处编写用户代码
        UART_ClearInterruptStatus(UART6, UART_INT_TX_EMPTY);                    // 清除中断标志位
    }
    if(UART_INT_RX_DONE & UART_GetInterruptStatus(UART6))                       // 串口接收缓冲中断
    {
        // -----------------* 无线模块 串口 预置中断处理函数 *-----------------
        wireless_module_uart_handler();
        // -----------------* 无线模块 串口 预置中断处理函数 *-----------------
        // 此处编写用户代码
        // 务必读取数据或者关闭中断 否则会一直触发串口接收中断

        // 此处编写用户代码
        UART_ClearInterruptStatus(UART6, UART_INT_RX_DONE);                     // 清除中断标志位
    }
}

void UART7_IRQHandler (void)
{
    if(UART_INT_TX_EMPTY & UART_GetInterruptStatus(UART7))                      // 串口发送缓冲空中断
    {
        // 此处编写用户代码
        // 务必填写数据或者关闭中断 否则会一直触发串口发送中断

        // 此处编写用户代码
        UART_ClearInterruptStatus(UART7, UART_INT_TX_EMPTY);                    // 清除中断标志位
    }
    if(UART_INT_RX_DONE & UART_GetInterruptStatus(UART7))                       // 串口接收缓冲中断
    {
        // 此处编写用户代码
        // 务必读取数据或者关闭中断 否则会一直触发串口接收中断

        // 此处编写用户代码
        UART_ClearInterruptStatus(UART7, UART_INT_RX_DONE);                     // 清除中断标志位
    }
}

void EXTI0_IRQHandler (void)
{
    // 此处编写用户代码 (A0/B0..I0) 引脚触发

    // 此处编写用户代码 (A0/B0..I0) 引脚触发
    EXTI_ClearLineStatus(EXTI, EXTI_LINE_0);                                    // 清除 line0 触发标志
}

void EXTI1_IRQHandler (void)
{
    // 此处编写用户代码 (A1/B1..I1) 引脚触发

    // 此处编写用户代码 (A1/B1..I1) 引脚触发
    EXTI_ClearLineStatus(EXTI, EXTI_LINE_1);                                    // 清除 line1 触发标志
}

void EXTI2_IRQHandler (void)
{
    // 此处编写用户代码 (A2/B2..H2) 引脚触发

    // 此处编写用户代码 (A2/B2..H2) 引脚触发
    EXTI_ClearLineStatus(EXTI, EXTI_LINE_2);                                    // 清除 line2 触发标志
}

void EXTI3_IRQHandler (void)
{
    // 此处编写用户代码 (A3/B3..H3) 引脚触发

    // 此处编写用户代码 (A3/B3..H3) 引脚触发
    EXTI_ClearLineStatus(EXTI, EXTI_LINE_3);                                    // 清除 line3 触发标志
}

void EXTI4_IRQHandler (void)
{
    // 此处编写用户代码 (A4/B4..G4) 引脚触发

    // 此处编写用户代码 (A4/B4..G4) 引脚触发
    EXTI_ClearLineStatus(EXTI, EXTI_LINE_4);                                    // 清除 line4 触发标志
}

void EXTI9_5_IRQHandler (void)
{
    if(EXTI_LINE_5 & EXTI_GetLineStatus(EXTI))                                  // line5 触发
    {
        // 此处编写用户代码 (A5/B5..G5) 引脚触发

        // 此处编写用户代码 (A5/B5..G5) 引脚触发
        EXTI_ClearLineStatus(EXTI, EXTI_LINE_5);                                // 清除 line5 触发标志
    }
    if(EXTI_LINE_6 & EXTI_GetLineStatus(EXTI))                                  // line6 触发
    {
        // 此处编写用户代码 (A6/B6..G6) 引脚触发

        // 此处编写用户代码 (A6/B6..G6) 引脚触发
        EXTI_ClearLineStatus(EXTI, EXTI_LINE_6);                                // 清除 line6 触发标志
    }
    if(EXTI_LINE_7 & EXTI_GetLineStatus(EXTI))                                  // line7 触发
    {
        // 此处编写用户代码 (A7/B7..G7) 引脚触发

        // 此处编写用户代码 (A7/B7..G7) 引脚触发
        EXTI_ClearLineStatus(EXTI, EXTI_LINE_7);                                // 清除 line7 触发标志
    }
    if(EXTI_LINE_8 & EXTI_GetLineStatus(EXTI))                                  // line8 触发
    {
        // -----------------* 摄像头 VSY 场中断 预置中断处理函数 *-----------------
        camera_vsync_handler();
        // -----------------* 摄像头 VSY 场中断 预置中断处理函数 *-----------------
        // 此处编写用户代码 (A8/B8..G8) 引脚触发

        // 此处编写用户代码 (A8/B8..G8) 引脚触发
        EXTI_ClearLineStatus(EXTI, EXTI_LINE_8);                                // 清除 line8 触发标志
    }
    if(EXTI_LINE_9 & EXTI_GetLineStatus(EXTI))                                  // line9 触发
    {
        // 此处编写用户代码 (A9/B9..G9) 引脚触发

        // 此处编写用户代码 (A9/B9..G9) 引脚触发
        EXTI_ClearLineStatus(EXTI, EXTI_LINE_9);                                // 清除 line9 触发标志
    }
}

void EXTI15_10_IRQHandler (void)
{
    if(EXTI_LINE_10 & EXTI_GetLineStatus(EXTI))                                 // line10 触发
    {
        // -----------------* DM1XA 声/反馈信号 预置中断处理函数 *-----------------
        dm1xa_sound_callback();
        // -----------------* DM1XA 声/反馈信号 预置中断处理函数 *-----------------
        // 此处编写用户代码 (A10/B10..G10) 引脚触发

        // 此处编写用户代码 (A10/B10..G10) 引脚触发
        EXTI_ClearLineStatus(EXTI, EXTI_LINE_10);                               // 清除 line10 触发标志
    }
    if(EXTI_LINE_11 & EXTI_GetLineStatus(EXTI))                                 // line11 触发
    {
        // -----------------* DM1XA 光信号 预置中断处理函数 *-----------------
        dm1xa_light_callback();
        // -----------------* DM1XA 光信号 预置中断处理函数 *-----------------
        // 此处编写用户代码 (A11/B11..G11) 引脚触发

        // 此处编写用户代码 (A11/B11..G11) 引脚触发
        EXTI_ClearLineStatus(EXTI, EXTI_LINE_11);                               // 清除 line11 触发标志
    }
    if(EXTI_LINE_12 & EXTI_GetLineStatus(EXTI))                                 // line12 触发
    {
        // 此处编写用户代码 (A12/B12..G12) 引脚触发

        // 此处编写用户代码 (A12/B12..G12) 引脚触发
        EXTI_ClearLineStatus(EXTI, EXTI_LINE_12);                               // 清除 line12 触发标志
    }
    if(EXTI_LINE_13 & EXTI_GetLineStatus(EXTI))                                 // line13 触发
    {
        // 此处编写用户代码 (A13/B13..G13) 引脚触发

        // 此处编写用户代码 (A13/B13..G13) 引脚触发
        EXTI_ClearLineStatus(EXTI, EXTI_LINE_13);                               // 清除 line13 触发标志
    }
    if(EXTI_LINE_14 & EXTI_GetLineStatus(EXTI))                                 // line14 触发
    {
        // 此处编写用户代码 (A14/B14..G14) 引脚触发

        // 此处编写用户代码 (A14/B14..G14) 引脚触发
        EXTI_ClearLineStatus(EXTI, EXTI_LINE_14);                               // 清除 line14 触发标志
    }
    if(EXTI_LINE_15 & EXTI_GetLineStatus(EXTI))                                 // line15 触发
    {
        // 此处编写用户代码 (A15/B15..G15) 引脚触发

        // 此处编写用户代码 (A15/B15..G15) 引脚触发
        EXTI_ClearLineStatus(EXTI, EXTI_LINE_15);                               // 清除 line15 触发标志
    }
}
